# virt-qt-tray

./: .gitignore  AGENTS.md  README.md  basedpyright.toml  distrobox.ini  pyproject.toml  ruff.toml
src/: main.py
tests/: libvirt-test-setup.xml  test_main.py
